src/app/globals.css
@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Prompt&display=swap");

@tailwind base;

@layer base {
  html {
    @apply text-[#4f4f4f];
  }

  html.dark {
    @apply text-neutral-50;
    @apply bg-neutral-800;
  }
}

@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 255, 255, 255;
  --background-start-rgb: 0, 0, 0;
  --background-end-rgb: 0, 0, 0;
  --background-body: #050922;
  --primary-color: #40f8ff;
  --input-border-color: #40f8ff;
  --background-side-navbar: rgb(1, 156, 161);
  --background-modal: #2a2a2a;
  --background-button: #5dc2d8;
  --background-button-hover: #00d0ff;
}

body {
  color: rgb(var(--foreground-rgb));
  background: var(--background-body);
}

.bg-body {
  background: var(--background-body);
}

.bg-gray {
  background: #2a2a2a;
}

input {
  border-color: var(--input-border-color) !important;
}

.bg-modal {
  background: var(--background-modal);
}

.bg-linear-blue {
  background: linear-gradient(40deg, #40f8ff, #00bac1, #2b79a4);
}

.bg-button {
  background: var(--background-button);
}

.bg-button:hover {
  background: var(--background-button-hover);
}

.bg-side-navbar {
  background: var(--background-side-navbar);
}

.border-color-primary {
  border-color: var(--input-border-color) !important;
}

.text-primary-color {
  color: var(--primary-color);
}

.rounded-image {
  border-radius: 50%;
  width: 100px;
  height: 100px;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type="number"] {
  -moz-appearance: textfield;
}

input[type="radio"]:checked {
  background: var(--input-border-color) !important;
}

input[type="checkbox"]:checked {
  --chkfg: #40f8ff;
  --chkbg: #2a2a2a;
}

.ql-container {
  min-height: 300px;
}

.aspect-ratio-card-activity {
  aspect-ratio: 4/1;
}

.css-1fzpoyk img {
  object-fit: cover !important;
}

/* Media query for mobile devices */
@media screen and (max-width: 700px) {
  .swal2-popup {
    width: 70%; /* Adjust the width for smaller screens */
    max-width: none; /* Remove maximum width for smaller screens */
    font-size: 12px;
  }
}

